fix: fix anchor color contrast

--- a/packages/frontend/src/styles.less
+++ b/packages/frontend/src/styles.less
@@ -8,3 +8,7 @@ body {
   max-width: 800px;
   margin: 16px auto;
 }
+
+a {
+  color: #3cf;
+}
